objects/Custom_Opportunity_Contact_Role__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>Business_Issues__c</fullName>
        <label>Business Issues</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Concerns__c</fullName>
        <label>Concerns</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <description>looks up the email from the contact, used for interest tags</description>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Role_Counter__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Contact Role Counter</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Roles</relationshipLabel>
        <relationshipName>Custom_Opportunity_Contact_Roles</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>combination of oppy id and contact id: OPPYID * &apos;|&apos; * ContactId</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Focus_Point__c</fullName>
        <label>Focus Point</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Focus of Receptivity (FOR)</fullName>
                </value>
                <value>
                    <fullName>Focus of Dissatisfaction (FOD)</fullName>
                </value>
                <value>
                    <fullName>Focus of Power (FOP)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>copies the name of the contact from the contact role into a new text field</description>
        <formula>HYPERLINK(&quot;/&quot;&amp;Id, Contact__r.Full_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Custom_Opportunity_Contact_Roles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resolution_of_Concerns__c</fullName>
        <label>Resolution of Concerns</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Executive Sponsor</fullName>
                </value>
                <value>
                    <fullName>Engineering/Development</fullName>
                </value>
                <value>
                    <fullName>Purchasing</fullName>
                </value>
                <value>
                    <fullName>Operations / Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Quality</fullName>
                </value>
                <value>
                    <fullName>Supply Chain / Logistic</fullName>
                </value>
                <value>
                    <fullName>Standardisation / Approval</fullName>
                </value>
                <value>
                    <fullName>Service /  Repair</fullName>
                </value>
                <value>
                    <fullName>Legal Advisor / Contract Review</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Contact Role</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Contact__c</columns>
        <columns>Focus_Point__c</columns>
        <columns>Name__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Role__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_my_Contact_Roles</fullName>
        <columns>Contact__c</columns>
        <columns>Focus_Point__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Role__c</columns>
        <filterScope>Mine</filterScope>
        <label>All my Contact Roles</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_FOD_Contacts</fullName>
        <columns>Contact__c</columns>
        <columns>Focus_Point__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Role__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Focus_Point__c</field>
            <operation>includes</operation>
            <value>Focus of Dissatisfaction (FOD)</value>
        </filters>
        <label>My FOD Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_FOP_Contacts</fullName>
        <columns>Contact__c</columns>
        <columns>Focus_Point__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Role__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Focus_Point__c</field>
            <operation>includes</operation>
            <value>Focus of Power (FOP)</value>
        </filters>
        <label>My FOP Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_FOR_Contacts</fullName>
        <columns>Contact__c</columns>
        <columns>Focus_Point__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Role__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Focus_Point__c</field>
            <operation>includes</operation>
            <value>Focus of Receptivity (FOR)</value>
        </filters>
        <label>My FOR Contacts</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>COCR-{0000}</displayFormat>
        <label>Contact Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Do_not_add_internal_contacts</fullName>
        <active>true</active>
        <description>This rule prevents users from adding internal contacts as a contact role</description>
        <errorConditionFormula>AND
(
$Profile.Name &lt;&gt; &quot;Service Account&quot;,
$Profile.Name &lt;&gt; &quot;Systemadministrator&quot;,
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
$Profile.Name &lt;&gt; &quot;BU Admin&quot;, 
Contact__r.RecordTypeId = &quot;012E0000000NDOD&quot;
)</errorConditionFormula>
        <errorMessage>You are not allowed to add a TE contact as a contact role.
Please add a customer contact instead.</errorMessage>
    </validationRules>
</CustomObject>